# azip

./: README.md  TESTING.md  plan.md  pyproject.toml
.github/workflows/: README.md  demo-download.yml  test-e2e.yml  test-full.yml  test-unit.yml
src/azip/: cli.py  downloader.py
tests/: test_cli.py  test_downloader.py  test_e2e.py  test_main.py
