[project]
name = "azip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MiguelElGallo", email = "60221874+MiguelElGallo@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.9",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.11.0",
    "typer>=0.19.2",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.7.0",
]

[project.scripts]
azip = "azip.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
markers = [
    "e2e: End-to-end tests using real Playwright browser (slow)",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
