[project]
name = "azip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MiguelElGallo", email = "60221874+MiguelElGallo@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.9",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.11.0",
    "typer>=0.19.2",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.7.0",
]

[project.scripts]
azip = "azip.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "mypy>=1.11.0",
    "types-requests>=2.31.0",
    "types-beautifulsoup4>=4.12.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
markers = [
    "e2e: End-to-end tests with real HTTP requests (slow)",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
ignore_missing_imports = false

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
